--- a/smart_bin/android/app/src/main/AndroidManifest.xml
+++ b/smart_bin/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="smartbins"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB3fjHyMuHEez1IZNHQ0pJhnoWI2gWxMs0"/>
+            android:value="APIKEY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
